made media cases too complicated, redoing again2

--- a/about.css
+++ b/about.css
@@ -81,7 +81,8 @@ li {
     margin-top: -2.5vh;
     max-width: 90%;
 }
-.service_text{
+
+.service_text {
     max-width: 90%;
 }
 
@@ -89,9 +90,157 @@ li {
 
 
 
+/* DESKTOP VERSION */
+@media screen and (840px<=width) and (height >=501px) {
+
+
+
+    .g-container {
+        display: grid;
+        grid-template-areas:
+            "image bio"
+            "email bio"
+            "services bio"
+            "links bio"
+            "live_header bio"
+            "events bio";
+
+        grid-template-columns: 1fr 1fr;
+        grid-auto-rows: minmax(3vh, auto);
+        left: 30vw;
+        padding-left: 22vw;
+        margin-right: 20vw;
+
+    }
+
+
+    .gr_image1 {
+
+        width: auto;
+        height: 51vh;
+        align-items: flex-start;
+        grid-area: image;
+        margin-top: 1vh;
+    }
+
+
+    .dj_list {
+        padding-left: 0;
+        margin-left: 0;
+        width: 100%;
+
+    }
+
+
+    .ev_list {
+        grid-area: list;
+        margin-top: -2vh;
+        font-size: 1.3rem;
+        grid-area: events;
+
+
+    }
+
+
+    .courier_text {
+
+
+        width: 90%;
+        margin-left: 3vh;
+        font-size: 1.2rem;
+        grid-area: bio;
+        margin-top: -5vh;
+
+    }
+
+    .media_links {
+        grid-area: links;
+        font-size: 1.2rem;
+        margin-top: -3.0vh;
+    }
+
+    .header_live_performance {
+        grid-area: live_header;
+        font-size: 1.7rem;
+    }
+
+    .header_email {
+        grid-area: email;
+        font-size: 1.6rem;
+    }
+
+    .service_text {
+        font-size: 1.4rem;
+    }
+
+}
 
 
 /* size determined by size of content and borders and margins */
+
+/* DESKTOP  NARROW 1 VERSION */
+@media screen and (width <=840px) and (height >=501px) {
+
+
+    .g-container {
+
+        padding-left: 34vw;
+        margin-right: 10vw;
+    }
+
+
+
+    .gr_image1 {
+
+
+        height: 35.5vh;
+        margin-top: 4vh;
+
+
+    }
+
+
+    .header_email {
+        font-size: 1.28rem;
+        margin-top: 0.1vh;
+    }
+
+    .courier_text {
+
+        font-size: 1.2rem;
+        max-width: 85%;
+        margin-top: -2vh;
+    }
+
+    .ev_list {
+        margin-top: -2.5vh;
+        max-width: 90%;
+        font-size: 1.2rem;
+    }
+
+    .header_live_performance {
+        font-size: 1.4rem;
+        margin-top: -1vh;
+
+    }
+
+    .media_links {
+        margin-top: -2vh;
+    }
+
+    .service_text {
+        font-size: 1.2rem;
+
+    }
+}
+
+/* DESKTOP  NO IMAGE IF TOO NARROW */
+@media screen and (width <=610px) {
+    .gr_image1 {
+        display: none;
+    }
+}
+
 
 
 
@@ -112,6 +261,7 @@ li {
 
         height: 21.5vh;
         margin-top: 5vh;
+        display: block;
 
 
     }
@@ -171,11 +321,11 @@ li {
 
         height: 75vh;
         margin-top: 4vh;
-
+        display: block;
 
     }
 
-  
+
 
 
 
@@ -232,7 +382,7 @@ li {
 
         height: 24vh;
         margin-top: 5vh;
-
+        display: block;
 
     }
 
@@ -265,7 +415,7 @@ li {
         margin-top: -2vh;
     }
 
-    .service_text{
+    .service_text {
         font-size: 1.2rem;
     }
 
@@ -291,6 +441,7 @@ li {
 
         height: 75vh;
         margin-top: 4vh;
+        display: block;
 
 
     }
@@ -345,7 +496,7 @@ li {
 
         height: 24vh;
         margin-top: 5vh;
-
+        display: block;
 
     }
 
@@ -378,7 +529,7 @@ li {
         margin-top: -2vh;
     }
 
-    .service_text{
+    .service_text {
         font-size: 1.1rem;
     }
 
@@ -401,6 +552,7 @@ li {
 
         height: 23.8vh;
         margin-top: 5vh;
+        display: block;
 
 
     }
@@ -462,6 +614,7 @@ li {
 
         height: 61vh;
         margin-top: 4vh;
+        display: block;
 
 
     }
@@ -525,6 +678,7 @@ li {
 
         height: 75vh;
         margin-top: 4vh;
+        display: block;
 
 
     }
@@ -580,6 +734,7 @@ li {
     .gr_image1 {
         height: 25.5vh;
         margin-top: 0.8vh;
+        display: block;
 
 
 
@@ -640,6 +795,7 @@ li {
 
         height: 37.5vh;
         margin-top: 0.8vh;
+        display: block;
 
 
 
@@ -698,6 +854,7 @@ li {
 
         height: 25vh;
         margin-top: 7vh;
+        display: block;
 
 
     }
@@ -756,6 +913,7 @@ li {
 
         height: 55vh;
         margin-top: 4vh;
+        display: block;
 
 
     }
@@ -798,7 +956,7 @@ li {
 }
 
 /* MOBILE VERSION Kindle Fire HDX VERTICAL */
-@media screen and (780px <=width <=830px) and (1086px <=height <= 1350px) {
+@media screen and (780px <=width <=830px) and (1086px <=height <=1350px) {
 
 
     .g-container {
@@ -817,6 +975,7 @@ li {
 
         height: 22.5vh;
         margin-top: 0.5vh;
+        display: block;
 
 
 
@@ -877,6 +1036,7 @@ li {
 
         height: 45vh;
         margin-top: 1.2vh;
+        display: block;
 
 
 
@@ -920,92 +1080,6 @@ li {
 }
 
 
-/* DESKTOP VERSION */
-@media screen and (width >=1301px) and (height >=501px) {
-
-
-
-    .g-container {
-        display: grid;
-        grid-template-areas:
-            "image bio"
-            "email bio"
-            "services bio"
-            "links bio"
-            "live_header bio"
-             "events bio";
-
-        grid-template-columns: 1fr 1fr;
-        grid-auto-rows: minmax(3vh, auto);
-        left: 30vw;
-        padding-left: 22vw;
-        margin-right: 20vw;
-
-    }
-
-
-    .gr_image1 {
-
-        width: auto;
-        height: 51vh;
-        align-items: flex-start;
-        grid-area: image;
-        margin-top: 1vh;
-    }
-
-
-    .dj_list {
-        padding-left: 0;
-        margin-left: 0;
-        width: 100%;
-
-    }
-
-
-    .ev_list {
-        grid-area: list;
-        margin-top: -2vh;
-        font-size: 1.3rem;
-        grid-area: events;
-
-
-    }
-
-
-    .courier_text {
-
-
-        width: 90%;
-        margin-left: 3vh;
-        font-size: 1.2rem;
-        grid-area: bio;
-        margin-top: -5vh;
-
-    }
-
-    .media_links{
-        grid-area: links;
-        font-size: 1.2rem;
-        margin-top: -3.0vh;
-    }
-
-    .header_live_performance{
-        grid-area: live_header;
-        font-size: 1.7rem;
-    }
-
-    .header_email{
-        grid-area: email;
-        font-size: 1.6rem;
-    }
-    .service_text{
-        font-size: 1.4rem;
-    }
-
-}
-
-
-
 /* MOBILE VERSION Iphone SE 2nd*/
 @media screen and (370px <=width <=380px) and (660px <=height <=666px) {
 
@@ -1030,6 +1104,7 @@ li {
         height: 20vh;
         margin-top: 4vh;
         transform: scale();
+        display: block;
 
 
     }
@@ -1079,269 +1154,4 @@ li {
     }
 
 
-}
-
-
-
-
-/* DESKTOP  NARROW WIDTH 1 */
-@media screen and (501px <=width <=799px) and (height >=501px) {
-
-
-    .g-container {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-
-        width: 100%;
-        left: 30vw;
-        padding-left: 40%;
-        margin-right: 20vw;
-
-        justify-content: center;
-
-        gap: 2vh;
-    }
-
-
-    .gr_image1 {
-
-        width: auto;
-        height: 60vh;
-        align-items: flex-start;
-        grid-column-start: 1;
-        grid-row-start: 1;
-        display: none;
-    }
-
-
-    .ev_header {
-        font-size: 1.6rem;
-        grid-column: span 2 / span 2;
-        grid-column-start: 1;
-        grid-row-start: 2;
-    }
-
-
-
-    ul,
-    li {
-        list-style-type: none;
-        width: 60%;
-    }
-
-    .p {
-
-        line-break: auto;
-        word-wrap: break-word;
-    }
-
-    .ev_list {
-        grid-column: span 2 / span 2;
-        grid-column-start: 1;
-        grid-row-start: 3;
-        margin-top: 0vh;
-    }
-
-    .courier_text {
-
-        grid-column-start: 1;
-        grid-row-start: 1;
-        width: 90%;
-        margin-left: 3vh;
-        font-size: 1.1rem;
-    }
-
-
-    .nav ul {
-        margin: 0;
-        font-size: 1.6rem;
-        position: fixed;
-        max-width: 21%;
-        display: flex;
-        flex-direction: column;
-        margin-left: -1.8vw;
-
-        overflow-wrap: break-word;
-
-
-    }
-
-
-    .overflow_box_hide {
-
-        display: none;
-
-    }
-
-    .content-section {
-        margin-top: -1vh;
-        font-size: 2.5rem;
-        color: #777;
-    }
-
-    .content-section1 {
-
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: 0.1vh;
-        margin-top: 0.1vh;
-
-    }
-
-
-
-
-
-}
-
-@media screen and (497px <=width <=891px) and (height >= 1301px) {
-
-
-
-
-    .nav ul {
-        margin: 0;
-        font-size: 1.6rem;
-        position: fixed;
-        max-width: 21%;
-        display: flex;
-        flex-direction: column;
-        margin-left: -1.8vw;
-        top: 4vh;
-        overflow-wrap: break-word;
-
-
-    }
-
-    .content-section {
-        margin-top: 5vh;
-        font-size: 2.5rem;
-        color: #777;
-    }
-
-    .content-section1 {
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: 3vh;
-        margin-top: 5vh;
-
-    }
-
-
-    .overflow_box_hide {
-        background-color: #ffffff;
-        width: 100%;
-        height: 10vh;
-        position: fixed;
-        top: 0;
-        z-index: 2;
-
-
-    }
-}
-
-/* DESKTOP  NARROW WIDTH 1 */
-@media screen and (width:500px) and (height >=501px) {
-
-
-    .g-container {
-        display: grid;
-        width: 100%;
-
-        padding-left: 7vw;
-        margin-right: 10vw;
-        margin-top: 10vh;
-
-
-        justify-content: center;
-
-        gap: 2vh;
-    }
-
-
-
-    .gr_image1 {
-
-        width: auto;
-        height: 22vh;
-        margin-top: 5vh;
-
-
-    }
-
-    .item-ev {
-        width: 100%;
-    }
-
-
-    ul,
-    li {
-        list-style-type: none;
-    }
-
-    .p {
-
-        line-break: auto;
-        word-wrap: break-word;
-    }
-
-    .ev_header {
-        font-size: 1.6rem;
-        margin-top: -1vh;
-    }
-
-    .courier_text {
-
-        font-size: 1.0rem;
-        max-width: 80%;
-    }
-
-    .ev_list {
-        margin-top: -35.5vh;
-    }
-
-
-
-    .nav ul {
-        font-size: 1.3rem;
-        position: fixed;
-        top: -1.3vh;
-        display: flex;
-        justify-content: left;
-        flex-direction: row;
-        margin-left: -7.4vw;
-        padding-top: 2vh;
-        flex-wrap: nowrap;
-        gap: 1.7vw;
-        z-index: 3;
-
-
-    }
-
-    .content-section {
-        margin-top: 5vh;
-        font-size: 2.5rem;
-        color: #777;
-    }
-
-    .content-section1 {
-        font-size: 2.5rem;
-        color: #777;
-        padding-top: 3vh;
-        margin-top: 5vh;
-
-    }
-
-
-    .overflow_box_hide {
-        background-color: #ffffff;
-        width: 100%;
-        height: 10vh;
-        position: fixed;
-        top: 0;
-        z-index: 2;
-
-
-    }
 }
