--- a/style.css
+++ b/style.css
@@ -197,6 +197,46 @@ ul {
     }
 }
 
+/* DESKTOP VERSION NARROW 2 */
+@media screen and (width <=610px) and (height >=501px) {
+
+    .nav ul {
+        flex-direction: column;
+        top: 2vh;
+        margin-left: -6.5vw;
+
+
+    }
+
+
+    .overflow_box_hide {
+
+        display: none;
+
+    }
+
+    .content-section {
+        margin-top: -1vh;
+    }
+
+    .content-section1 {
+
+        font-size: 2.5rem;
+        padding-top: var(--margin_top);
+        margin-top: 1vh;
+
+    }
+
+    .link_event_promo {
+        margin-top: 6.5vh;
+    }
+
+    .footer {
+        font-size: 1rem;
+    }
+}
+
+
 
 
 /* MOBILE VERSION GALAXY NOTE ANDROID 11 Vertical */
@@ -505,7 +545,7 @@ ul {
 
     .nav ul {
         top: 2.5vh;
-        
+
     }
 
 
