--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ ul {
 
 
 /* DESKTOP VERSION */
-@media screen and (840px <=width) and (height >=501px) {
+@media screen and (840px <=width) and (height >=210px) {
 
     .nav ul {
         margin: 0;
@@ -158,8 +158,8 @@ ul {
 }
 
 
-/* DESKTOP VERSION NARROW 1 */
-@media screen and (width <=840px) and (height >=501px) {
+/* DESKTOP VERSION NARROW 1, TALL */
+@media screen and (width <=840px) and (height >=210px) {
 
     .nav ul {
 
@@ -197,8 +197,8 @@ ul {
     }
 }
 
-/* DESKTOP VERSION NARROW 2 */
-@media screen and (width <=610px) and (height >=501px) {
+/* DESKTOP VERSION NARROW 2, TALL */
+@media screen and (width <=610px) and (height >=210px) {
 
     .nav ul {
         flex-direction: column;
@@ -236,12 +236,12 @@ ul {
     }
 }
 
-/* DESKTOP  NARROW 3 VERSION */
-@media screen and (width <=532px) and (height >=501px) {
+/* DESKTOP  NARROW 3, TALL VERSION */
+@media screen and (width <=532px) and (height >=210px) {
     .nav ul {
         flex-direction: row;
         top: -2vh;
-        margin-left: -6.5vw;
+        margin-left: -2.5vw;
 
 
     }
