made media cases too complicated, redoing again8

--- a/about.css
+++ b/about.css
@@ -250,11 +250,12 @@ li {
         display: grid;
         grid-template-areas:
 
-            "email bio"
-            "services bio"
-            "links bio"
-            "live_header bio"
-            "events bio";
+            "email"
+            "services"
+            "links"
+            "bio"
+            "live_header"
+            "events";
     }
 
     .gr_image1 {
