--- a/style.css
+++ b/style.css
@@ -275,6 +275,47 @@ ul {
 }
 
 
+/* DESKTOP NARROW, short 1 VERSION */
+@media screen and (width <= 532px) and (height <=350px){
+
+      .nav ul {
+        flex-direction: column;
+        top: -2vh;
+        margin-left: -9vw;
+        max-width: 20%;
+
+
+    }
+
+
+    .overflow_box_hide {
+
+        display: none;
+
+    }
+
+    .content-section {
+        margin-top: -1vh;
+    }
+
+    .content-section1 {
+
+        font-size: 2.5rem;
+        padding-top: var(--margin_top);
+        margin-top: 1vh;
+
+    }
+
+    .link_event_promo {
+        margin-top: 6.5vh;
+    }
+
+    .footer {
+        font-size: 1rem;
+    }
+}
+
+}
 
 
 /* MOBILE VERSION GALAXY NOTE ANDROID 11 Vertical */
@@ -350,7 +391,7 @@ ul {
 
 /* MOBILE VERSION GALAXY S10 Horizontal */
 
-@media screen and (width <=760px) and (height <=360px) {
+@media screen and (533px <= width <=760px) and (height <=360px) {
 
     .nav ul {
 
